--- a/src/app/auth/login/login/login.page.scss
+++ b/src/app/auth/login/login/login.page.scss
@@ -119,7 +119,7 @@ div.ion-text-center{
 }
 
 ion-content{
-    padding: 0px 0px 0px 0px !important;
+    //padding: 0px 0px 0px 0px !important;
 }
 
 .espacio{
