--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -1,78 +1,67 @@
-<!--<ion-header>
-  <ion-toolbar> 
-      <ion-row class = "container">
-        <ion-col class= "col_back" size=1>
-          <div class= "regresar"> <ion-icon name="chevron-back-outline" routerLink='/login'></ion-icon></div>          
-        </ion-col>
-        <ion-col class= "col_logo" size= 8>
-          <div class= "logo"> <img src="../assets/img/cabuto.png"></div> 
-        </ion-col>
-        <ion-col class="col_title" size=3>
-          <div class= "registro">REGISTRO</div>
-        </ion-col>
-      </ion-row>
-  </ion-toolbar>
-</ion-header>-->
 <!--<ion-header>-->
   <div class = 'header'>
-  <div class ="btn_regresar"> <img src="../assets/img/atras.png"  routerLink='/login'> </div>
-  <div class= "header" > <img src="../assets/img/header_registro.png" size= 12></div>
+  <div class ="btn_regresar"> <img src="../assets/img/regresar.png"  routerLink='/login'> </div>
+  <div class= "headerS" > <img src="../assets/img/header_registro.png" size= 12></div>
 </div>
-<!--</ion-header>-->
+<!--</ion-header>[disabled]="form.invalid"-->
 
-<ion-content class= "Formulario">
+<ion-content class="animated fadeIn login auth-page inicio">
   <form  #form="ngForm" (ngSubmit)="register(form)"> 
    <ion-grid >
      <div class="form" >
-       <ion-col align-self-center size-md="4" size-lg="10" size-xs="10">
+       <ion-col align-self-center size-md="3" size-lg="5" size-xs="10">
          <div class= "perfil"> 
            <label class="hoverable" for="fileInput">
             <img [src]="url ? url : '../assets/img/avatar_perfil.png'"> 
-            <div class="hover-text">Choose file</div>
-            <div class="background"></div>
+           <!-- <div class="hover-text">Choose file</div>
+            <div class="background"></div>-->
           </label>
           <input id="fileInput" type='file' (change)="onSelectFile($event)">
-          <button *ngIf="url" (click)="delete()" >delete</button>
+          <!---<button class="x" *ngIf="url" (click)="delete()" >X</button>-->
+         <div class ="delete">
+          <input id="button" type="button" *ngIf="url" (click)="delete()" value="X">
+         </div>
           </div> 
            <ion-item >
-             <ion-input  name="cedula" type="text" placeholder="RUC/Cedula" ngModel required></ion-input>
-           </ion-item>
-           <ion-item>
-             <ion-input  name="nombre" type="text" placeholder="Nombre" ngModel required></ion-input>
-           </ion-item>
-           <ion-item>
-             <ion-input  name="apellido" type="text" placeholder="Apellido" ngModel required></ion-input>
+             <ion-input id= "1" name="cedula" type="text" placeholder="RUC/Cedula*" ngModel required></ion-input>
+            <!-- <input name="cedula" type="text" placeholder="RUC/Cedula*" ngModel required />-->
            </ion-item>
            <ion-item >
-            <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
+             <ion-input id= "2" name="nombre" type="text" placeholder="Nombre*" ngModel required></ion-input>
+           </ion-item>
+           <ion-item >
+             <ion-input id= "3" name="apellido" type="text" placeholder="Apellido*" ngModel required></ion-input>
+           </ion-item>
+           <ion-item >
+            <ion-input id= "4" name="email" type="email" placeholder="your@email.com*" ngModel required></ion-input>
           </ion-item>  
            <ion-item>
-             <ion-input name="contrasena" type="{{showPass ? 'text' : 'password'}}" placeholder="Contraseña" ngModel required></ion-input>
+             <ion-input id= "5" name="contrasena" type="{{showPass ? 'text' : 'password'}}" placeholder="Contraseña*" ngModel required></ion-input>
              <button ion-button type="button" clear color="dark" item-right (click)="togglePasswordClick()">
               <ion-icon class="icono-input" text-right  id="iconIntro" [name]="passwordToggleIcon" style="zoom:2.0;"></ion-icon>
             </button>
            </ion-item>
-           <ion-item>
-             <ion-input name="confirmar" type="{{showPass ? 'text' : 'password'}}" placeholder="Repetir Contraseña" ngModel required></ion-input>
+           <ion-item >
+             <ion-input id= "6" name="confirmar" type="{{showPass ? 'text' : 'password'}}" placeholder="Repetir Contraseña*" ngModel required></ion-input>
              <button ion-button type="button" clear color="dark" item-right (click)="togglePasswordClick()">
               <ion-icon class="icono-input" text-right  id="iconIntro" [name]="passwordToggleIcon" style="zoom:2.0;"></ion-icon>
             </button>
            </ion-item>
          <ion-radio-group  >
-           <ion-item class = "Condicion">
-             <ion-label >Acepto Términos y Condiciones</ion-label>
-             <ion-radio slot="start" value="acepto" [disabled]="form.invalid"></ion-radio>
-           </ion-item>
+           <div class = "Condicion">
+             <ion-label class="terminos" >Acepto Términos y Condiciones</ion-label>
+             <ion-radio class = "radio" slot="start" value="acepto" ></ion-radio>
+           </div>
          </ion-radio-group>
        </ion-col>
      </div>
    </ion-grid>
    <ion-footer>
- <ion-toolbar >
+ <!--<ion-toolbar >-->
    <div>
-     <ion-button   size="large" type="submit" [disabled]="form.invalid" expand="block">Registrarse</ion-button>
+     <ion-button   size="large" type="submit"expand="full">Registrarse</ion-button>
    </div>
- </ion-toolbar>
+ <!--</ion-toolbar>-->
 </ion-footer>
 
  </form>
