--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -9,6 +9,7 @@
 }
 */
 
+
 *{
     font-family: 'MyriadProSemibold' !important;
 }
@@ -18,6 +19,217 @@
     font-weight: bold;
     font-size: larger;
     color: var(--ion-color-azul-oscuro);
+    font-size: 2rem;
+}
+
+
+.icono{
+    position: relative;
+    right: 15px;
+    width: 20px;
+    height: 20px;
+}
+
+ion-toolbar{
+    --background: linear-gradient(to left,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
+}
+
+
+.contenedor-searchbar{
+    display: flex;
+align-items: center;
+    background: var(--ion-color-gris-claro);
+    color: var(--ion-color-gris-oscuro);
+    border-radius: 5px;  
+    height: 30px; 
+    width: 103%;
+    font-size: 1rem;
+
+
+
+}
+
+.contenedor{
+    padding: 30px 0px;
+}
+
+ion-input{
+    font-weight: bold;
+}
+
+.contenedor-page{
+    padding: 20px 30px;
+}
+
+.contenedor-filtro{
+    padding: 20px 0px 40px 0px;
+    display: flex;
+    justify-content: flex-end;
+    //height: 10px;
+    //width: 30px;
+    font-size: 1rem;
+}
+
+.selector{
+    font-family: var(--ion-font-family);
+    font-weight: bold;
+    font-size: medium;
+    color: var(--ion-color-azul-oscuro);
+    background: var(--ion-color-gris-claro);
+padding: 5px 30px 5px 60px;
+    border-radius: 5px;  
+    vertical-align: middle;
+    height: 40px;
+    font-size: 1rem;
+    width: 70%;
+
+}
+
+.contenedor-selector{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.subtitulo{
+    color: var(--ion-color-gris-oscuro);
+    font-weight: lighter;
+    padding: 10px 0px 0px 0px;
+    font-size: 0.8rem!important;
+    padding-right: 5px;
+    vertical-align: middle;
+}
+
+.div-producto{
+    display: flex;
+     flex-flow: row nowrap; /* Align on the same line */
+  justify-content: space-around; 
+vertical-align: middle;
+box-shadow: 5px 5px 5px 5px #c2c2c2;
+//padding: 20px 0px;
+    border-radius: 20px;
+    height: 130px;
+
+
+}
+.producto-carrito{
+    // display: flex;
+    // vertical-align: bottom;
+    // justify-content: end;
+    // width: 100%;
+    position: relative;
+    left: 75px;
+    //right: 30px;
+    bottom:15px;
+}
+
+.btn-producto{
+vertical-align: middle;
+
+}
+
+#mas{
+    margin-right:  12px;
+}
+#menos{
+        margin-left:  12px;
+
+}
+
+.estilo-cantidad{
+    width: 22px;
+    height: 22px;
+    border-radius: 5px;
+    border: solid 1px gray;
+    vertical-align: middle;
+    font-size: 12px;
+    text-align: center;
+
+}
+.contener-producto{
+    padding:20px 0px;
+        // height:  100px;
+
+}
+
+.contener-columna{
+    display: block;
+}
+
+.nombre-producto{
+     font-family: var(--ion-font-family);
+    font-weight: bold;
+    color: var(--ion-color-azul-oscuro);
+    font-size: 14px;
+    position: relative;
+    top:20px;
+    right: 10px;
+}
+
+.producto{
+    position: relative;
+    bottom: 20px;
+}
+
+.producto >img {
+    box-shadow: 5px 5px 5px 5px #c2c2c2;
+}
+
+.detalle{
+    position: relative;
+    bottom: 25px;
+    text-align: center;
+    font-style: italic;
+    font-size: smaller;
+    color: #2153FF;
+}
+
+.nombre{
+    //text-align: justify;
+    width: 160px;
+    height: 90px;
+}
+
+
+.precio{
+    color: var(--ion-color-naranja-oscuro);
+    font-weight: bolder;
+    //font-size: small;
+    position: relative;
+    right:  3px;
+}
+
+div.precio h4{
+        text-align: left;
+        font-size: 1rem;
+
+}
+
+div.carrito img{
+    position: relative;
+    top: 38px;
+    left: 3px;
+}
+
+.centrar{
+    width: 70px;
+}
+
+.contener-columna-centrar{
+    width: 15%;
+}
+
+/*
+*{
+    font-family: 'MyriadProSemibold' !important;
+}
+
+.titulo{
+    font-family: var(--ion-font-family);
+    font-weight: bold;
+    font-size: larger;
+    color: var(--ion-color-azul-oscuro);
+    font-size: 2rem;
 }
 
 
@@ -82,12 +294,13 @@ padding: 10px 20px;
 
 .div-producto{
     display: flex;
-     flex-flow: row nowrap; /* Align on the same line */
+     flex-flow: row nowrap; 
   justify-content: space-around; 
 vertical-align: middle;
-    box-shadow: 3px 3px 0px 0px #c2c2c2;
+    box-shadow: 5px 5px 5px 5px #c2c2c2;
 //padding: 20px 0px;
     border-radius: 20px;
+    //border:#c2c2c2 1px solid;
     height: 130px;
 
 
@@ -98,7 +311,7 @@ vertical-align: middle;
     // justify-content: end;
     // width: 100%;
     position: relative;
-    left: 75px;
+    left: 80px;
     bottom:15px;
 }
 
@@ -127,12 +340,19 @@ vertical-align: middle;
 }
 .contener-producto{
     padding:20px 0px;
+    
         // height:  100px;
 
 }
 
 .contener-columna{
     display: block;
+    
+}
+
+.contener-columnaI{
+    display: block;
+    padding-left: 2px;
 }
 
 .nombre-producto{
@@ -145,18 +365,29 @@ vertical-align: middle;
     right: 10px;
 }
 
+.producto > img{
+    height: 100%!important;
+    width:100% !important;
+    //padding-left: 10px;
+}
+
 .producto{
     position: relative;
-    bottom: 20px;
+    //bottom: 20px;
+    box-shadow: 5px 5px 5px 5px #c2c2c2;
+    width:70%;
+    height:70%;
+    
 }
 
 .detalle{
     position: relative;
-    bottom: 25px;
+    bottom: 10px;
     text-align: center;
     font-style: italic;
     font-size: smaller;
     color: #2153FF;
+    padding-right: 30px;
 }
 
 .nombre{
@@ -172,19 +403,239 @@ vertical-align: middle;
     //font-size: small;
     position: relative;
     //right:  5px;
+    //padding-left: 20px;
+    padding-right: 18px;
 }
 
 div.precio h4{
         text-align: left;
+        font-size: 1rem;
 
 }
 
 div.carrito img{
     position: relative;
     top: 38px;
-    left: 5px;
+    left: 14px;
+    right:  6px;
 }
 
 .centrar{
     width: 70px;
 }
+
+.conenter-columna-centrar{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+
+/**
+*{
+    font-family: 'MyriadProSemibold' !important;
+}
+
+.titulo{
+    font-family: var(--ion-font-family);
+    font-weight: bold;
+    font-size: larger;
+    color: var(--ion-color-azul-oscuro);
+    font-size: 2rem;
+}
+
+
+.icono{
+    position: relative;
+    right: 15px;
+    width: 20px;
+    height: 20px;
+}
+
+ion-toolbar{
+    --background: linear-gradient(to left,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
+}
+
+
+.contenedor-searchbar{
+    display: flex;
+align-items: center;
+    background: var(--ion-color-gris-claro);
+    color: var(--ion-color-gris-oscuro);
+    border-radius: 5px;  
+    height: 40px; 
+
+
+}
+
+.contenedor{
+    padding: 30px 0px;
+}
+
+ion-input{
+    font-weight: bold;
+}
+
+.contenedor-page{
+    padding: 20px 30px;
+}
+
+.contenedor-filtro{
+    padding: 20px 0px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.selector{
+    font-family: var(--ion-font-family);
+    font-weight: bold;
+    font-size: medium;
+    color: var(--ion-color-azul-oscuro);
+    background: var(--ion-color-gris-claro);
+padding: 10px 20px;
+    border-radius: 5px;  
+    vertical-align: middle;
+
+}
+
+.subtitulo{
+    color: var(--ion-color-gris-oscuro);
+    font-weight: lighter;
+    padding: 0px 10px 0px 0px;
+}
+
+.div-producto{
+    display: flex;
+     flex-flow: row nowrap; 
+     justify-content: space-around; 
+     vertical-align: middle;
+         box-shadow: 5px 5px 5px 5px #c2c2c2;
+     //padding: 20px 0px;
+         border-radius: 20px;
+         //border:#c2c2c2 1px solid;
+         height: 130px;
+     
+     
+     }
+     .producto-carrito{
+         // display: flex;
+         // vertical-align: bottom;
+         // justify-content: end;
+         // width: 100%;
+         position: relative;
+         left: 70px;
+         bottom:15px;
+     }
+     
+     .btn-producto{
+     vertical-align: middle;
+     
+     }
+     
+     #mas{
+         margin-right:  12px;
+     }
+     #menos{
+             margin-left:  12px;
+     
+     }
+     
+     .estilo-cantidad{
+         width: 22px;
+         height: 22px;
+         border-radius: 5px;
+         border: solid 1px gray;
+         vertical-align: middle;
+         font-size: 12px;
+         text-align: center;
+     
+     }
+     .contener-producto{
+         padding:20px 0px;
+         
+             // height:  100px;
+     
+     }
+     
+     .contener-columna{
+         display: block;
+         
+     }
+     
+     .contener-columnaI{
+         display: block;
+         padding-left: 25px;
+         z-index: inherit 0;
+     }
+     
+     .nombre-producto{
+          font-family: var(--ion-font-family);
+         font-weight: bold;
+         color: var(--ion-color-azul-oscuro);
+         font-size: 14px;
+         position: relative;
+         top:20px;
+         right: 10px;
+         z-index: inherit 1;
+     }
+     
+     .producto > img{
+         height: 150%!important;
+         width:120% !important;
+         //padding-left: 10px;
+         padding-bottom: 20px;
+     }
+     
+     .producto{
+         position: relative;
+         //bottom: 20px;
+         box-shadow: 5px 5px 5px 5px #c2c2c2;
+         width:75%;
+         height:70%;
+         padding-bottom: 19px;
+     }
+     
+     .detalle{
+         position: relative;
+         bottom: 10px;
+         text-align: center;
+         font-style: italic;
+         font-size: smaller;
+         color: #2153FF;
+         padding-right: 35px;
+     }
+     
+     .nombre{
+         //text-align: justify;
+         width: 160px;
+         height: 90px;
+     }
+     
+     
+     .precio{
+         color: var(--ion-color-naranja-oscuro);
+         font-weight: bolder;
+         //font-size: small;
+         position: relative;
+         right:  5px;
+         //left: 20px;
+     }
+     
+     div.precio h4{
+             text-align: left;
+             font-size: 1rem;
+     
+     }
+     
+     div.carrito img{
+         position: relative;
+         top: 38px;
+         //left: 10px;
+         left: 10px;
+     }
+     
+     .centrar{
+         width: 70px;
+     }
+**/
