[#173932469] arreglo de validacion junto a pantalla de carga

--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -6,7 +6,7 @@
 <!--</ion-header>[disabled]="form.invalid"-->
 
 <ion-content class="animated fadeIn login auth-page inicio">
-  <form  #form="ngForm" (ngSubmit)="register(form)"> 
+  <form  #form="ngForm" (ngSubmit)="showLoading(form)"> 
    <ion-grid >
      <div class="form" >
        <ion-col align-self-center size-md="3" size-lg="5" size-xs="10">
