--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -7,7 +7,7 @@
 <ion-content class="animated fadeIn login auth-page inicio">
   <div class="contenido">
       
- <form class = "centro" #form="ngForm" (ngSubmit)="verificar(form)"> 
+ <form class = "centro" #form="ngForm" (ngSubmit)="showLoading(form)"> 
   <ion-grid >
     <div class="form" >
       <ion-col align-self-center size-md="5" size-lg="10" size-xs="10"> 
