--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,8 +6,8 @@
 
   .custom-modal .modal-wrapper{
     // add modal styling here
-    width: 600px;
-    height: 200px; 
+    //width: 600px;
+    //height: 200px; 
     *{
       font-family:'MyriadProSemibold' !important ;
     }
@@ -16,9 +16,29 @@
       float: right;
       
     }
-    .cancelar{
-      float: left;
+    .cancelar > img{
       
+      padding: 20px 20px 0px 20px;
+      //float: left;
+      
+    }
+
+    .correo{
+      padding-top: 50px;
+      padding-bottom: 20px;
+    }
+    .cancelar{
+      width: 40%;
+      height: 40%;
+      text-align: center;
+    padding: 30px 30px 0px 30px;
+    margin:auto;
+    display: flex;
+    }
+
+    .contendor-mail{
+      padding: 50px 25px 0px 25px;
+      font-size: 0.88rem!important;
     }
 
   }
