--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -21,13 +21,13 @@
               <ion-icon class="icono-input" text-right  id="iconIntro" [name]="passwordToggleIcon" style="zoom:2.0;"></ion-icon>
             </button>
           </ion-item>
-          <p style="color: var(--ion-color-naranja-oscuro);" class=ion-text-right (click)="contrasena()">
+          <p style="color: var(--ion-color-naranja-oscuro);" class=ion-text-right (click)="showLoadingC()">
           <!--<ion-label style="color: var(--ion-color-naranja-oscuro);">-->¿Olvidaste tu contraseña?<!--/ion-label-->
       </p>
       </ion-col>
     </div>
     <div class="button" >
-      <img src="../assets/img/btn_fb.png" (click)="facebook()" >
+      <img src="../assets/img/btn_fb.png" (click)="showLoadingF()" >
       <!--
       <ion-button size="large" expand = "block" class = "button-fb" (click)="facebook()">
         <img src="../assets/img/btn_fb.png" >
@@ -36,7 +36,7 @@
   </ion-grid >
   <!--<div class="ion-text-center" style="color: var(--ion-color-naranja-oscuro);" ><p class = "letras">¿Eres nuevo? <strong class="fuente-color" ><a style="color: var(--ion-color-naranja-oscuro);" routerLink='/registro'>Registrate aquí</a></strong></p></div>-->
   <div class = "espacio">
-  <div class="ion-text-center"  ><p class = "letras">¿Eres nuevo? <a class= "ruta" routerLink='/registro'>Registrate aquí</a></p></div>
+  <div class="ion-text-center"  ><p class = "letras">¿Eres nuevo? <a class= "ruta" (click)="showLoadingR()">Registrate aquí</a></p></div>
   </div>
   <ion-footer>
     <!--<router-link class="routerLink" to='/registro'>Registrate aquí</router-link>-->
