--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -1,6 +1,6 @@
 <!--<ion-header>-->
   <div class = 'header'>
-  <div class ="btn_regresar"> <img src="../assets/img/regresar.png"  routerLink='/login'> </div>
+  <div class ="btn_regresar"> <img src="../assets/img/regresar.png"  (click)="showLoadingR()"> </div>
   <div class= "headerS" > <img src="../assets/img/header_registro.png" size= 12></div>
 </div>
 <!--</ion-header>[disabled]="form.invalid"-->
