--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -15,7 +15,7 @@
   </div>
   <div class = "btn">
   <!--<div class = "confirmar" ><ion-button class = "btn_cnf" style="--background: linear-gradient(to left top,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro)) !important;" (click)="enviar()" >Enviar</ion-button></div>-->
-  <div class = "cancelar" ><img src="../assets/img/atras.png"  (click)="dismiss()"></div>
+  <div class = "cancelar" ><img src="../assets/img/atras.png"  (click)="showLoadingD()"></div>
   </div>
 </ion-content>
 <div>
