--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -9,6 +9,9 @@
 }
 */
 
+ion-header{
+    height: 10px;
+}
 
 *{
     font-family: 'MyriadProSemibold' !important;
@@ -19,7 +22,7 @@
     font-weight: bold;
     font-size: larger;
     color: var(--ion-color-azul-oscuro);
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 
 
