--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -11,6 +11,7 @@
 
 ion-header{
     height: 10px;
+    width: 100%;
 }
 
 *{
@@ -79,7 +80,7 @@ ion-input{
     font-size: medium;
     color: var(--ion-color-azul-oscuro);
     background: var(--ion-color-gris-claro);
-padding: 5px 30px 5px 60px;
+padding: 5px 20px 5px 20px;
     border-radius: 5px;  
     vertical-align: middle;
     height: 40px;
@@ -172,15 +173,17 @@ vertical-align: middle;
 .producto{
     position: relative;
     bottom: 20px;
+    height: 5rem;
+    width: 5rem;
 }
 
 .producto >img {
-    box-shadow: 5px 5px 5px 5px #c2c2c2;
+    box-shadow: 3px 3px 3px 3px #c2c2c2;
 }
 
 .detalle{
     position: relative;
-    bottom: 25px;
+    bottom: 0px;
     text-align: center;
     font-style: italic;
     font-size: smaller;
@@ -189,8 +192,10 @@ vertical-align: middle;
 
 .nombre{
     //text-align: justify;
-    width: 160px;
-    height: 90px;
+    width: 150px;
+    height: 80px;
+    padding-left: 25px;
+    font-size: 1rem;
 }
 
 
@@ -199,19 +204,28 @@ vertical-align: middle;
     font-weight: bolder;
     //font-size: small;
     position: relative;
-    right:  3px;
+    //right:  3px;
+    padding-left: 0px;
+    padding-right: 30px;
+    text-align: right;
+    
 }
 
 div.precio h4{
-        text-align: left;
-        font-size: 1rem;
+    position: relative;
+    padding-left: 0px;
+    text-align: right;
+    font-size: 1rem;
+        //padding-right: 20px;
+    //padding-right: 30px;
 
 }
 
 div.carrito img{
     position: relative;
-    top: 38px;
+    top: 33px;
     left: 3px;
+    text-align: right;
 }
 
 .centrar{
@@ -219,9 +233,25 @@ div.carrito img{
 }
 
 .contener-columna-centrar{
-    width: 15%;
+    float: right;
+    position: relative;
+    width: 30%;
+    padding: 0px 0px 0px 10px;
+    text-align: right;
+    justify-content: flex-end;
 }
 
+.contener-columnaI{
+    float: right;
+    position: relative;
+    padding-left: 20px;
+    text-align: right;
+    justify-content: flex-end;
+}
+.carrito{
+    padding-left: 0px;
+    padding-right: 30px;
+}
 /*
 *{
     font-family: 'MyriadProSemibold' !important;
