[#173932228]arreglo del boton

--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -58,8 +58,8 @@
    </ion-grid>
    <ion-footer>
  <!--<ion-toolbar >-->
-   <div>
-     <ion-button   size="large" type="submit"expand="full">Registrarse</ion-button>
+   <div class="button-content">
+     <ion-button class= "btn-registro"  size="large" type="submit"expand="full"><p class = "registro">Registrarse</p></ion-button>
    </div>
  <!--</ion-toolbar>-->
 </ion-footer>
