[#173932469] arreglos con respecto al diseño

--- a/src/app/auth/registro/registro-exitoso/registro-exitoso.page.html
+++ b/src/app/auth/registro/registro-exitoso/registro-exitoso.page.html
@@ -8,4 +8,4 @@
 <ion-content>
   <div class= "fondo" > <img src="../assets/img/registro_exitoso.png" size= 12></div>
 </ion-content>
-<ion-button size="large" expand = "block" class = "comenzar_btn" routerLink='/login'>Comenzar</ion-button>
+<ion-button size="large" expand = "block" class = "comenzar_btn" (click)='showLoading()'>Comenzar</ion-button>
