--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -121,10 +121,12 @@ box-shadow: 5px 5px 5px 5px #c2c2c2;
     // vertical-align: bottom;
     // justify-content: end;
     // width: 100%;
-    position: relative;
-    left: 75px;
+    position: absolute;
+    left: 180px;
     //right: 30px;
-    bottom:15px;
+    //bottom:150px;
+    //padding-bottom: 100px ;
+    
 }
 
 .btn-producto{
@@ -196,6 +198,11 @@ vertical-align: middle;
     height: 80px;
     padding-left: 25px;
     font-size: 1rem;
+    padding-top: 0px;
+}
+
+.nombre h6{
+    padding-top: 0px;
 }
 
 
@@ -222,10 +229,14 @@ div.precio h4{
 }
 
 div.carrito img{
-    position: relative;
-    top: 33px;
-    left: 3px;
-    text-align: right;
+    //position: relative;
+    position: absolute;
+    top: 95px;
+    width:1.6rem !important;
+    height:1.3rem!important ;
+    //left: 3px;
+    //text-align: right;
+    right: 2rem;
 }
 
 .centrar{
@@ -236,7 +247,7 @@ div.carrito img{
     float: right;
     position: relative;
     width: 30%;
-    padding: 0px 0px 0px 10px;
+    padding: 0px 0px 0px 0px;
     text-align: right;
     justify-content: flex-end;
 }
