--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -122,7 +122,7 @@ box-shadow: 5px 5px 5px 5px #c2c2c2;
     // justify-content: end;
     // width: 100%;
     position: absolute;
-    left: 180px;
+    left: 12rem;
     //right: 30px;
     //bottom:150px;
     //padding-bottom: 100px ;
