--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -61,7 +61,7 @@
                     <div class="div-producto">
                         <div class="contener-columnaI">
                             <div class="producto">
-                                <img src="../assets/img/deja-final.png" width="75" height="95" >
+                                <img src="../assets/img/deja.png" width="75" height="95" >
                             </div>
                             
                                 <h6 class="detalle">Ver detalle</h6>
