--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
 <!--<ion-header>-->
 <div class = 'header'>
-  <div class= "menu_hamburguesa"> <img src="../assets/img/menu_lateral.png"></div>
+  <div class= "menu_hamburguesa"> <img src="../assets/img/menu_lateral.png"><ion-menu-button menu="main-menu"></ion-menu-button></div>
+  <!--<ion-buttons slot="start"><ion-menu-button color="primary" menu="main-menu"></ion-menu-button></ion-buttons>-->
   <div class= "headerR" > <img src="../assets/img/header_final.png" size= 12></div>
-  <div class= "carrito_logo"> <img [src]="carrito" (click)="openCart(); changeCart()"></div>
+  <div class= "carrito_logo"> <img [src]="carrito" routerLink="shopping-cart" (click)="changeCart()"></div>
 </div>
   <!--<div class= "carrito_logo"> <ion-img [src]="carrito" (click)="openCart(); changeCart()"></ion-img></div>-->
 <!--
