--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<ion-app>
-  <ion-menu menuId="main-menu" side="start" contentId="principal" class="menu">
+<ion-app style="--background: #4a4ae4 !important;">
+  <ion-menu style="--background: #4a4ae4 !important;" menuId="main-menu" side="start" contentId="principal" class="menu">
     <div class="header-content">
       <img src="../assets/img/avatar.png" alt="">
       <h2>Dario</h2>
@@ -28,14 +28,14 @@
           <ion-item routerLink="producto">Políticas de Privacidad</ion-item>
         </ion-menu-toggle>
       </ion-list>
-      <div class="social-media" style="background: #4a4ae4 !important;">
-        <a><img src="../assets/img/facebook.png"></a>
-        <a><img src="../assets/img/twitter.png"></a>
-        <a><img src="../assets/img/instagram.png"></a>
+      <div class="social-media" style="background: #4a4ae4 !important; ">
+        <div class = "facebook"><a href="https://www.facebook.com/cabutosmarket"><img src="../assets/img/facebook.png"></a></div>
+        <div class = "twitter"><a href="https://twitter.com/cabutos1?lang=es"><img src="../assets/img/twitter.png"></a></div>
+        <div class = "instagram"><a href="https://www.instagram.com/cabutos/?hl=es-la"><img src="../assets/img/instagram.png"></a></div>
       </div>
     </ion-content>
     <ion-footer>
-      Cerrar Sesión
+      <div class="sesion">Sesión</div> 
     </ion-footer>
   </ion-menu>
   
