--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,7 @@
 }*/
 
 .header-content{
+    background-color: #4a4ae4 !important;
     height: 250px;
     width: 350px;
     text-align: center;
@@ -72,9 +73,7 @@ ion-menu{
     --background: #4a4ae4 !important;
 }
 
-ion-content{
-    --background: #4a4ae4 !important;
-}
+
 
 ion-item{
     --background: #4a4ae4 !important;
@@ -85,15 +84,21 @@ ion-item{
 
 
 .social-media {
-    display: inline-block;
+    //display: inline-block!important;
     text-align: center;
     background: #4a4ae4 !important;
+    
+    display: flex;
+    justify-content: center;
+    padding-top:20px;
+    padding-bottom: 10px;
 
     img {
-        height: 3rem;
+        height: 2rem;
         width: 3rem;
         text-align: center;
         background: #4a4ae4 !important;
+        padding: 0px 10px 0px 10px;
     }
 }
 
@@ -106,6 +111,17 @@ ion-footer{
     background: #4a4ae4 !important;
     color: white;
     text-align: center;
-    padding-bottom: 2rem;
-    border-top: white;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    
+}
+
+.sesion{
+    border-top: white!important; 
+    border-top-width: 2em!important;
+    border-top-color: white!important;
+
+}
+ion-app {
+ --background: #4a4ae4 !important;   
 }
