--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <img src="../assets/img/avatar.png" alt="">
       <h2>Dario</h2>
     </div>
-    <ion-content >
+    <ion-content style="--background: #4a4ae4 !important;" >
       <ion-list>
         <ion-menu-toggle auto-hide="true">
           <ion-item  routerLink="shopping-cart">Perfil</ion-item>
