--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -80,6 +80,7 @@ ion-item{
     background: #4a4ae4 !important;
     padding-left: 1rem;
     color: white;
+    padding-right: 1.5rem;
 }
 
 
@@ -120,6 +121,7 @@ ion-footer{
     border-top: white!important; 
     border-top-width: 10px!important;
     border-top-color: white!important;
+    border: 10px white!important;
 
 }
 ion-app {
