--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu style="--background: #4a4ae4 !important;" menuId="main-menu" side="start" contentId="principal" class="menu">
     <div class="header-content">
       <img src="../assets/img/avatar.png" alt="">
-      <h2>Dario</h2>
+      <h2>${{fullname}}</h2>
     </div>
     <ion-content style="--background: #4a4ae4 !important;" >
       <ion-list>
