--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<ion-app style="--background: #4a4ae4 !important;">
-  <ion-menu style="--background: #4a4ae4 !important;" menuId="main-menu" side="start" contentId="principal" class="menu">
+<ion-app style="--background: #2153FF !important;">
+  <ion-menu style="--background: #2153FF !important;" menuId="main-menu" side="start" contentId="principal" class="menu">
     <div class="header-content">
       <img src="../assets/img/avatar.png" alt="">
-      <h2>${{fullname}}</h2>
+      <h2>{{fullname}}</h2>
     </div>
-    <ion-content style="--background: #4a4ae4 !important;" >
+    <ion-content style="--background: #2153FF !important;" >
       <ion-list>
         <ion-menu-toggle auto-hide="true">
           <ion-item  routerLink="shopping-cart">Perfil</ion-item>
@@ -28,14 +28,16 @@
           <ion-item routerLink="producto">Políticas de Privacidad</ion-item>
         </ion-menu-toggle>
       </ion-list>
-      <div class="social-media" style="background: #4a4ae4 !important; ">
+      <div class="social-media" style="background: #2153FF !important; ">
         <div class = "facebook"><a href="https://www.facebook.com/cabutosmarket"><img src="../assets/img/facebook.png"></a></div>
         <div class = "twitter"><a href="https://twitter.com/cabutos1?lang=es"><img src="../assets/img/twitter.png"></a></div>
         <div class = "instagram"><a href="https://www.instagram.com/cabutos/?hl=es-la"><img src="../assets/img/instagram.png"></a></div>
       </div>
     </ion-content>
     <ion-footer>
-      <div class="sesion">Sesión</div> 
+      <ion-menu-toggle auto-hide="true">
+        <ion-button (click)="showLoading()" ><div class="sesion"> Cerrar Sesión</div></ion-button>
+      </ion-menu-toggle> 
     </ion-footer>
   </ion-menu>
   
