--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
   <ion-menu style="--background: #2153FF !important;" menuId="main-menu" side="start" contentId="principal" class="menu">
     <div class="header-content">
       <img src="../assets/img/avatar.png" alt="">
-      <h2>{{fullname}}</h2>
+      <div class = "fullname">
+        <h2 >{{name}}</h2>
+        <h2 >{{lastname}}</h2>
+      </div>
+      
     </div>
     <ion-content style="--background: #2153FF !important;" >
       <ion-list>
