--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,9 +44,13 @@
     }
 }*/
 
+*{
+    font-family: 'MyriadProSemibold' !important;
+}   
+
 .header-content{
     background-color: #2153FF !important;
-    height: 250px;
+    height: 225px;
     width: 350px;
     text-align: center;
     display: inline-flex;
@@ -63,8 +67,10 @@
     h2{
         font-weight: 300;
         color: #fff;
-        padding-top: 2rem;
-        padding-left: 2rem;
+        padding: 0px 0px 0px 0px;
+        //padding-top: 2rem;
+        //padding-left: 2rem;
+        margin: 0px;
     }
 
 }
@@ -80,7 +86,7 @@ ion-item{
     background: #2153FF !important;
     padding-left: 1rem;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding-right: 1.5rem;
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
@@ -93,8 +99,8 @@ ion-item{
     background: #2153FF !important;
     display: flex;
     justify-content: center;
-    padding-top:40px;
-    padding-bottom: 10px;
+    padding-top:60px;
+    padding-bottom: 20px;
 
     img {
         height: 2.5rem;
@@ -136,7 +142,7 @@ ion-button{
     --background:#2153FF !important;
     --border-top: white;
     width: 20rem;
-    padding-bottom: 1.5rem;
+    //padding-bottom: 1.5rem;
 }
 
 ion-app {
@@ -149,5 +155,12 @@ ion-content{
 }
 ion-list{
     margin: 0 auto;
-    padding: 0px 0px 20px 0px ;
+    padding: 0px 0px 0px 0px ;
+    //--border-bottom:white;
+}
+
+.fullname{
+    padding: 25px 0px 0px 20px;
+    margin: 0px;
+    text-align: left;
 }
