--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,27 +45,26 @@
 }*/
 
 *{
-    font-family: 'MyriadProSemibold' !important;
+    font-family: 'arial' !important;
 }   
 
 .header-content{
     background-color: #2153FF !important;
-    height: 225px;
-    width: 350px;
+    height: 200px;
     text-align: center;
     display: inline-flex;
-    padding-left: 2rem;
+    padding-left: 0.5rem;
     padding-top: 3.5rem;
     vertical-align: middle;
 
     img{
-        width: 130px;
-        height: 130px;
+        width: 90px;
+        height: 90px;
         border-radius: 50%;
     }
 
     h2{
-        font-weight: 300;
+        font-weight: 100;
         color: #fff;
         padding: 0px 0px 0px 0px;
         //padding-top: 2rem;
@@ -77,6 +76,7 @@
 
 ion-menu{
     --background: #2153FF !important;
+    --width: 16rem;
 }
 
 
@@ -84,12 +84,11 @@ ion-menu{
 ion-item{
     --background: #2153FF !important;
     background: #2153FF !important;
-    padding-left: 1rem;
+    padding-left: 0.5rem;
     color: white;
     font-size: 1rem;
-    padding-right: 1.5rem;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
 }
 
 
@@ -99,8 +98,11 @@ ion-item{
     background: #2153FF !important;
     display: flex;
     justify-content: center;
-    padding-top:60px;
+    padding-top:90px;
     padding-bottom: 20px;
+    border-bottom: 1px white solid!important;
+    margin-left: 10px;
+    margin-right: 10px;
 
     img {
         height: 2.5rem;
@@ -121,28 +123,20 @@ ion-footer{
     color: white;
     text-align: center;
     padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-top:white 1px solid;
-    height: 4rem;
-    
+    width: max-content;
+    margin-left: 4rem;
 
 }
 
 .sesion{
-    border-top: white!important; 
-    border-top-width: 10px!important;
-    border-top-color: white!important;
-    border: 10px white!important;
     --background:#2153FF !important;
-    font-size: 1.3rem;
-    
+    font-size: 1rem;
 }
 
 ion-button{
     --background:#2153FF !important;
-    --border-top: white;
-    width: 20rem;
-    //padding-bottom: 1.5rem;
+    padding-bottom: 1.5rem;
+    width: max-content;
 }
 
 ion-app {
@@ -158,6 +152,7 @@ ion-list{
     padding: 0px 0px 0px 0px ;
     //--border-bottom:white;
 }
+
 
 .fullname{
     padding: 25px 0px 0px 20px;
