--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -98,7 +98,7 @@ ion-item{
     background: #2153FF !important;
     display: flex;
     justify-content: center;
-    padding-top:90px;
+    padding-top:110px;
     padding-bottom: 20px;
     border-bottom: 1px white solid!important;
     margin-left: 10px;
@@ -138,7 +138,7 @@ ion-footer{
 ion-button{
     --background:#2153FF !important;
     padding-bottom: 1.5rem;
-    border-color: transparent;
+    --border-style: none;
     text-align: center;
 
 }
