--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,7 +52,7 @@
     background-color: #2153FF !important;
     height: 180px;
     text-align: center;
-    display: inline-flex;
+    display: flex;
     padding-left: 0.5rem;
     padding-top: 3.5rem;
     vertical-align: middle;
@@ -64,7 +64,7 @@
     }
 
     h2{
-        font-weight: 100;
+        font-size: 1.2rem;
         color: #fff;
         padding: 0px 0px 0px 0px;
         //padding-top: 2rem;
