--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
       </div>
       <ion-footer>
         <ion-menu-toggle auto-hide="true">
-          <ion-button (click)="showLoading()" ><div class="sesion"> Cerrar Sesión</div></ion-button>
+          <div class="sesion" (click)="showLoading()"> Cerrar Sesión</div>
         </ion-menu-toggle> 
       </ion-footer>
     </ion-content>
