--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -60,13 +60,14 @@ ion-header{
     position:absolute;
     top:25px;
     right:25px;
+    margin-left: 6rem;
 }
 
 .carrito_logo > img{
     /*width: 90%;
     height: 150%;*/
-    height: 6%;
-    width: 6%;
+    height: 10%;
+    width: 10%;
     float: right;;
 }
 .half-circle {
