Cambios para generar apk

--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -13,7 +13,7 @@
         </ion-col>
         <ion-col size=9 class="detalle">
           <ion-row >
-            <ion-button (click)="increaseCartItem(p)" class="borrar_content" color="medium" fill="clear">
+            <ion-button class="borrar_content" color="medium" fill="clear">
               <ion-img src="../assets/img/borrar.png" class="borrar"></ion-img>
             </ion-button>
           </ion-row>
@@ -25,13 +25,13 @@
           <ion-row>
             <ion-col size=8>
               <ion-row class="row_detalles">
-                  <ion-button (click)="increaseCartItem(p)" class="restar_content" color="medium" fill="clear">
+                  <ion-button class="restar_content" color="medium" fill="clear">
                     <ion-img src="../assets/img/restar.png" class="restar"></ion-img>
                   </ion-button>
                   <ion-button class="cantidad" color="medium" fill="clear">
                     20
                   </ion-button>
-                  <ion-button (click)="decreaseCartItem(p)" class="sumar_content" color="medium" fill="clear">
+                  <ion-button  class="sumar_content" color="medium" fill="clear">
                     <ion-img src="../assets/img/agregar.png" class="sumar"></ion-img>
                   </ion-button>
               </ion-row>
