[#173932492] arreglo de diseño

--- a/src/app/auth/login/login/login.page.scss
+++ b/src/app/auth/login/login/login.page.scss
@@ -4,7 +4,7 @@
 
 .header{
     padding: 0px 0px 0px 0px !important;
-    height: 47%;
+    height: 41%;
 }
 ion-footer{
     margin: 0 auto;
@@ -73,7 +73,7 @@ ion-button.button-fb{
     justify-content: center;
     align-content: center;
     align-items: center;
-    padding: 35px 0px 19px 0px;
+    padding: 30px 0px 19px 0px;
     //padding: 40px 0px 40px 0px;
 
 }
@@ -106,7 +106,7 @@ div.ion-text-center{
 
 .ion-text-right{
     padding: 0px 0px 0px 0px!important;
-    font-family: "MyriadPro-Light"!important;
+    //font-family: "MyriadPro-Light"!important;
     font-size: 0.8rem;
 }
 
