Menu arreglos finales

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
       </div>
       <ion-footer>
         <ion-menu-toggle auto-hide="true">
-          <div class="sesion" (click)="showLoading()"> Cerrar Sesión</div>
+          <div class="sesion" (click)="initOrOut()">{{action}}</div>
         </ion-menu-toggle> 
       </ion-footer>
     </ion-content>
