[#173932492] arreglo de diseño

--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -35,7 +35,7 @@
     </div><br>
   </ion-grid >
   <!--<div class="ion-text-center" style="color: var(--ion-color-naranja-oscuro);" ><p class = "letras">¿Eres nuevo? <strong class="fuente-color" ><a style="color: var(--ion-color-naranja-oscuro);" routerLink='/registro'>Registrate aquí</a></strong></p></div>-->
-  <div class = "espacio">
+  <div class = "espacio2">
   <div class="ion-text-center"  ><p class = "letras">¿Eres nuevo? <a class= "ruta" (click)="showLoadingR()">Registrate aquí</a></p></div>
   </div>
   <ion-footer>
