--- a/src/app/auth/login/login/login.page.scss
+++ b/src/app/auth/login/login/login.page.scss
@@ -4,7 +4,7 @@
 
 .header{
     padding: 0px 0px 0px 0px !important;
-    height: 41%;
+    height: 18.3rem;
 }
 ion-footer{
     margin: 0 auto;
@@ -64,8 +64,8 @@ ion-button.button-fb{
     //width: 300%;
     //height: 180%;
     //margin: auto;
-    //width: 80%;
-    //height: 120%;
+    width: 100%;
+    height: 18.4rem;
 }
 
 .form{
@@ -139,7 +139,7 @@ div.ion-text-center{
 }
 
 .contenedor-footer{
-    height: 100%;
+    height: 3.4rem;
     margin: 0 auto;
 }
 
