[#173932469] arreglo de diseño

--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -61,7 +61,7 @@
                     <div class="div-producto">
                         <div class="contener-columnaI">
                             <div class="producto">
-                                <img src="http://cabutoshop.pythonanywhere.com{{productos.imagen}}" width="75" height="95" >
+                                <img src="http://cabutoshop.pythonanywhere.com{{productos.imagen}}"  >
                             </div>
                             
                                 <h6 class="detalle">Ver detalle</h6>
