--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -179,6 +179,7 @@ vertical-align: middle;
 .producto >img {
     height:120px!important ;
     width: 150px!important;
+    padding-bottom: 5px;
     //box-shadow: 3px 3px 3px 3px #c2c2c2;
 }
 
