Mostrar ubicacion en mapa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
           <ion-item  routerLink="shopping-cart">Perfil</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item class="menu-items" routerLink="producto">Locales</ion-item>
+          <ion-item class="menu-items" routerLink="establecimiento">Locales</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
           <ion-item routerLink="producto">Cupones</ion-item>
