--- a/src/app/establecimiento/establecimiento.page.scss
+++ b/src/app/establecimiento/establecimiento.page.scss
@@ -11,7 +11,7 @@ ion-header{
     font-weight: bold;
     font-size: larger;
     color: var(--ion-color-azul-oscuro);
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-bottom: 0px;
 }
 
@@ -56,7 +56,12 @@ ion-input{
 }
 
 .contenedor-page{
-    padding: 20px 30px;
+    padding: 0px 30px 20px 30px ;
+}
+
+#contenedor-mapa{
+    height: 20%;
+    width: 20%;
 }
 
 .contenedor-filtro{
