--- a/src/global.scss
+++ b/src/global.scss
@@ -25,3 +25,11 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+.select-modal .modal-wrapper {
+    height: 50%;
+    top: 25%;
+    width: 80%;
+    position: absolute; 
+    display: block;  
+    border-radius: 20px; 
+ }
