[#173932812] vista para los detalles del producto

--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -64,7 +64,7 @@
                                 <img src="http://cabutoshop.pythonanywhere.com{{productos.imagen}}"  >
                             </div>
                             
-                                <h6 class="detalle">Ver detalle</h6>
+                                <h6 class="detalle" (click)=detalle(productos.imagen,productos.nombre,productos.descripcion,productos.precio)>Ver detalle</h6>
                             
                         </div>
                         <div class="contener-columna">
