[##173932799] funcionalidad de ofertas

--- a/src/app/ofertas/ofertas.page.html
+++ b/src/app/ofertas/ofertas.page.html
@@ -34,7 +34,7 @@
                                 <h4>${{productos.precio}}</h4>-->
                             </div>
                             <div class="oferta-carrito">
-                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" >
+                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(ofertas.nombre) >
                                 <!--<img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.nombre)>
                                 <input type="text" tag = "barra" name="" id="{{productos.nombre}}" disabled="true" class="estilo-cantidad" placeholder="0" value  = "0" >
                                 <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar(productos.nombre)>-->
