--- a/src/app/ofertas/ofertas.page.scss
+++ b/src/app/ofertas/ofertas.page.scss
@@ -2,6 +2,13 @@
     font-family: 'MyriadProSemibold' !important;
 }
 
+.oferta{
+    position: relative;
+    bottom: 20px;
+    height: 5rem;
+    width: 8rem;
+}
+
 .oferta img {
     height: 10rem;
     width: 10rem;
@@ -81,7 +88,7 @@
     font-family: var(--ion-font-family);
     font-weight: bold;
     color: var(--ion-color-azul-oscuro);
-    font-size: 14px;
+    font-size: 0.7rem;
     position: relative;
     top:20px;
     right: 10px;
@@ -93,4 +100,8 @@
     padding-top: 50px;
     text-align: right;
     padding-right: 0.8rem;
+}
+
+.contener-oferta{
+    padding:20px 0px;
 }
