cambios con respecto a los mensajes y loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
           <ion-item routerLink="producto">Cupones</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
+          <ion-item routerLink="ofertas">Ofertas</ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle auto-hide="true">
           <ion-item routerLink="producto">Historial de Compras</ion-item>
         </ion-menu-toggle>  
         <ion-menu-toggle auto-hide="true">
