--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -21,7 +21,7 @@
               <ion-icon class="icono-input" text-right  id="iconIntro" [name]="passwordToggleIcon" style="zoom:2.0;"></ion-icon>
             </button>
           </ion-item>
-          <p style="color: var(--ion-color-naranja-oscuro);" class=ion-text-right (click)="showLoadingC()">
+          <p style="color: var(--ion-color-naranja-oscuro);" class=ion-text-right (click)="contrasena()">
           <!--<ion-label style="color: var(--ion-color-naranja-oscuro);">-->¿Olvidaste tu contraseña?<!--/ion-label-->
       </p>
       </ion-col>
