--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -82,7 +82,7 @@
                                 <h4>${{productos.precio}}</h4>
                             </div>
                             <div class="carrito">
-                                <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=showLoading(productos.nombre)>
+                                <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=carrito(productos.nombre)>
                             </div>
                         </div>
                     </div>
