--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,6 +14,36 @@
     }
   }
 
+  .CorrectoOferta .modal-wrapper{
+    padding-top: 50px;
+    width: 300px;
+    height: 380px; 
+    border-radius: 10px;
+    *{
+      font-family:'MyriadProSemibold' !important ;
+    }
+  }
+
+  .CorrectoProducto .modal-wrapper{
+    padding-top: 50px;
+    width: 300px;
+    height: 380px; 
+    border-radius: 10px;
+    *{
+      font-family:'MyriadProSemibold' !important ;
+    }
+  }
+
+  .IncorrectoProducto .modal-wrapper{
+    padding-top: 50px;
+    width: 300px;
+    height: 380px; 
+    border-radius: 10px;
+    *{
+      font-family:'MyriadProSemibold' !important ;
+    }
+  }
+
   .custom-modal .modal-wrapper{
     // add modal styling here
     //width: 600px
